src/main/java/de/bfs/eurdepparser/parser/eurdep/EurdepParser.java
// Generated from de/bfs/eurdepparser/parser/eurdep/Eurdep.g4 by ANTLR 4.9.2
package de.bfs.eurdepparser.parser.eurdep;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class EurdepParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, BEGINEURDEP=2, ENDEURDEP=3, BEGINHEADER=4, ENDHEADER=5, BEGINLOCALITY=6, 
		ENDLOCALITY=7, BEGINRADIOLOGICAL=8, ENDRADIOLOGICAL=9, BEGINDEFAULT=10, 
		ENDDEFAULT=11, BEGINUNKOWN=12, ENDUNKOWN=13, BEGINCOMMENT=14, ENDCOMMENT=15, 
		LINE_BEGIN=16, LINE_END=17, REMARK=18, NEWLINE=19, STRING=20, WHITESPACE=21, 
		COMMA=22, DQOUTE=23;
	public static final int
		RULE_eurdepfile = 0, RULE_eurdep_header = 1, RULE_section = 2, RULE_locality = 3, 
		RULE_radiological = 4, RULE_comment = 5, RULE_unknown_section = 6, RULE_radiological_content = 7, 
		RULE_default_section = 8, RULE_default_record = 9, RULE_field_list = 10, 
		RULE_header_field = 11, RULE_record = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"eurdepfile", "eurdep_header", "section", "locality", "radiological", 
			"comment", "unknown_section", "radiological_content", "default_section", 
			"default_record", "field_list", "header_field", "record"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\\FIELD_LIST'", null, null, null, null, "'\\BEGIN_LOCALITY;'", 
			"'\\END_LOCALITY;'", "'\\BEGIN_RADIOLOGICAL;'", "'\\END_RADIOLOGICAL;'", 
			"'\\BEGIN_DEFAULT;'", "'\\END_DEFAULT;'", null, null, null, null, null, 
			null, null, null, null, null, "','", "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "BEGINEURDEP", "ENDEURDEP", "BEGINHEADER", "ENDHEADER", "BEGINLOCALITY", 
			"ENDLOCALITY", "BEGINRADIOLOGICAL", "ENDRADIOLOGICAL", "BEGINDEFAULT", 
			"ENDDEFAULT", "BEGINUNKOWN", "ENDUNKOWN", "BEGINCOMMENT", "ENDCOMMENT", 
			"LINE_BEGIN", "LINE_END", "REMARK", "NEWLINE", "STRING", "WHITESPACE", 
			"COMMA", "DQOUTE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Eurdep.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EurdepParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class EurdepfileContext extends ParserRuleContext {
		public TerminalNode BEGINEURDEP() { return getToken(EurdepParser.BEGINEURDEP, 0); }
		public Eurdep_headerContext eurdep_header() {
			return getRuleContext(Eurdep_headerContext.class,0);
		}
		public TerminalNode ENDEURDEP() { return getToken(EurdepParser.ENDEURDEP, 0); }
		public LocalityContext locality() {
			return getRuleContext(LocalityContext.class,0);
		}
		public List<SectionContext> section() {
			return getRuleContexts(SectionContext.class);
		}
		public SectionContext section(int i) {
			return getRuleContext(SectionContext.class,i);
		}
		public EurdepfileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eurdepfile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).enterEurdepfile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).exitEurdepfile(this);
		}
	}

	public final EurdepfileContext eurdepfile() throws RecognitionException {
		EurdepfileContext _localctx = new EurdepfileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_eurdepfile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			match(BEGINEURDEP);
			setState(27);
			eurdep_header();
			setState(29);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BEGINLOCALITY) {
				{
				setState(28);
				locality();
				}
			}

			setState(34);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==BEGINRADIOLOGICAL || _la==BEGINUNKOWN) {
				{
				{
				setState(31);
				section();
				}
				}
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(37);
			match(ENDEURDEP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Eurdep_headerContext extends ParserRuleContext {
		public TerminalNode BEGINHEADER() { return getToken(EurdepParser.BEGINHEADER, 0); }
		public TerminalNode ENDHEADER() { return getToken(EurdepParser.ENDHEADER, 0); }
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public List<Header_fieldContext> header_field() {
			return getRuleContexts(Header_fieldContext.class);
		}
		public Header_fieldContext header_field(int i) {
			return getRuleContext(Header_fieldContext.class,i);
		}
		public Eurdep_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eurdep_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).enterEurdep_header(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).exitEurdep_header(this);
		}
	}

	public final Eurdep_headerContext eurdep_header() throws RecognitionException {
		Eurdep_headerContext _localctx = new Eurdep_headerContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_eurdep_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			match(BEGINHEADER);
			setState(42); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(42);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case BEGINCOMMENT:
					{
					setState(40);
					comment();
					}
					break;
				case LINE_BEGIN:
					{
					setState(41);
					header_field();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(44); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==BEGINCOMMENT || _la==LINE_BEGIN );
			setState(46);
			match(ENDHEADER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionContext extends ParserRuleContext {
		public Unknown_sectionContext unknown_section() {
			return getRuleContext(Unknown_sectionContext.class,0);
		}
		public RadiologicalContext radiological() {
			return getRuleContext(RadiologicalContext.class,0);
		}
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).enterSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).exitSection(this);
		}
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_section);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BEGINUNKOWN:
				{
				setState(48);
				unknown_section();
				}
				break;
			case BEGINRADIOLOGICAL:
				{
				setState(49);
				radiological();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocalityContext extends ParserRuleContext {
		public TerminalNode BEGINLOCALITY() { return getToken(EurdepParser.BEGINLOCALITY, 0); }
		public Field_listContext field_list() {
			return getRuleContext(Field_listContext.class,0);
		}
		public TerminalNode ENDLOCALITY() { return getToken(EurdepParser.ENDLOCALITY, 0); }
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public List<RecordContext> record() {
			return getRuleContexts(RecordContext.class);
		}
		public RecordContext record(int i) {
			return getRuleContext(RecordContext.class,i);
		}
		public LocalityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_locality; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).enterLocality(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).exitLocality(this);
		}
	}

	public final LocalityContext locality() throws RecognitionException {
		LocalityContext _localctx = new LocalityContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_locality);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(BEGINLOCALITY);
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==BEGINCOMMENT) {
				{
				{
				setState(53);
				comment();
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(59);
			field_list();
			setState(62); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(62);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case BEGINCOMMENT:
					{
					setState(60);
					comment();
					}
					break;
				case LINE_BEGIN:
					{
					setState(61);
					record();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(64); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==BEGINCOMMENT || _la==LINE_BEGIN );
			setState(66);
			match(ENDLOCALITY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RadiologicalContext extends ParserRuleContext {
		public TerminalNode BEGINRADIOLOGICAL() { return getToken(EurdepParser.BEGINRADIOLOGICAL, 0); }
		public Radiological_contentContext radiological_content() {
			return getRuleContext(Radiological_contentContext.class,0);
		}
		public TerminalNode ENDRADIOLOGICAL() { return getToken(EurdepParser.ENDRADIOLOGICAL, 0); }
		public RadiologicalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_radiological; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).enterRadiological(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).exitRadiological(this);
		}
	}

	public final RadiologicalContext radiological() throws RecognitionException {
		RadiologicalContext _localctx = new RadiologicalContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_radiological);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(BEGINRADIOLOGICAL);
			setState(69);
			radiological_content();
			setState(70);
			match(ENDRADIOLOGICAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentContext extends ParserRuleContext {
		public TerminalNode BEGINCOMMENT() { return getToken(EurdepParser.BEGINCOMMENT, 0); }
		public TerminalNode ENDCOMMENT() { return getToken(EurdepParser.ENDCOMMENT, 0); }
		public List<TerminalNode> STRING() { return getTokens(EurdepParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(EurdepParser.STRING, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(EurdepParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(EurdepParser.COMMA, i);
		}
		public List<TerminalNode> DQOUTE() { return getTokens(EurdepParser.DQOUTE); }
		public TerminalNode DQOUTE(int i) {
			return getToken(EurdepParser.DQOUTE, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(EurdepParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(EurdepParser.NEWLINE, i);
		}
		public CommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).enterComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).exitComment(this);
		}
	}

	public final CommentContext comment() throws RecognitionException {
		CommentContext _localctx = new CommentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_comment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(BEGINCOMMENT);
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NEWLINE) | (1L << STRING) | (1L << COMMA) | (1L << DQOUTE))) != 0)) {
				{
				{
				setState(73);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NEWLINE) | (1L << STRING) | (1L << COMMA) | (1L << DQOUTE))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79);
			match(ENDCOMMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Unknown_sectionContext extends ParserRuleContext {
		public TerminalNode BEGINUNKOWN() { return getToken(EurdepParser.BEGINUNKOWN, 0); }
		public TerminalNode ENDUNKOWN() { return getToken(EurdepParser.ENDUNKOWN, 0); }
		public List<Field_listContext> field_list() {
			return getRuleContexts(Field_listContext.class);
		}
		public Field_listContext field_list(int i) {
			return getRuleContext(Field_listContext.class,i);
		}
		public List<RecordContext> record() {
			return getRuleContexts(RecordContext.class);
		}
		public RecordContext record(int i) {
			return getRuleContext(RecordContext.class,i);
		}
		public List<Default_sectionContext> default_section() {
			return getRuleContexts(Default_sectionContext.class);
		}
		public Default_sectionContext default_section(int i) {
			return getRuleContext(Default_sectionContext.class,i);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public Unknown_sectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unknown_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).enterUnknown_section(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).exitUnknown_section(this);
		}
	}

	public final Unknown_sectionContext unknown_section() throws RecognitionException {
		Unknown_sectionContext _localctx = new Unknown_sectionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_unknown_section);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(BEGINUNKOWN);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << BEGINDEFAULT) | (1L << BEGINCOMMENT) | (1L << LINE_BEGIN))) != 0)) {
				{
				setState(86);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
					{
					setState(82);
					field_list();
					}
					break;
				case LINE_BEGIN:
					{
					setState(83);
					record();
					}
					break;
				case BEGINDEFAULT:
					{
					setState(84);
					default_section();
					}
					break;
				case BEGINCOMMENT:
					{
					setState(85);
					comment();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(91);
			match(ENDUNKOWN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Radiological_contentContext extends ParserRuleContext {
		public List<Field_listContext> field_list() {
			return getRuleContexts(Field_listContext.class);
		}
		public Field_listContext field_list(int i) {
			return getRuleContext(Field_listContext.class,i);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public List<Default_sectionContext> default_section() {
			return getRuleContexts(Default_sectionContext.class);
		}
		public Default_sectionContext default_section(int i) {
			return getRuleContext(Default_sectionContext.class,i);
		}
		public List<RecordContext> record() {
			return getRuleContexts(RecordContext.class);
		}
		public RecordContext record(int i) {
			return getRuleContext(RecordContext.class,i);
		}
		public Radiological_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_radiological_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).enterRadiological_content(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).exitRadiological_content(this);
		}
	}

	public final Radiological_contentContext radiological_content() throws RecognitionException {
		Radiological_contentContext _localctx = new Radiological_contentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_radiological_content);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==BEGINCOMMENT) {
				{
				{
				setState(93);
				comment();
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(99);
			field_list();
			setState(106);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(104);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case BEGINCOMMENT:
						{
						setState(100);
						comment();
						}
						break;
					case BEGINDEFAULT:
						{
						setState(101);
						default_section();
						}
						break;
					case LINE_BEGIN:
						{
						setState(102);
						record();
						}
						break;
					case T__0:
						{
						setState(103);
						field_list();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(108);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(109);
				field_list();
				}
				break;
			case LINE_BEGIN:
				{
				setState(110);
				record();
				}
				break;
			case ENDRADIOLOGICAL:
				break;
			default:
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Default_sectionContext extends ParserRuleContext {
		public TerminalNode BEGINDEFAULT() { return getToken(EurdepParser.BEGINDEFAULT, 0); }
		public List<Default_recordContext> default_record() {
			return getRuleContexts(Default_recordContext.class);
		}
		public Default_recordContext default_record(int i) {
			return getRuleContext(Default_recordContext.class,i);
		}
		public TerminalNode ENDDEFAULT() { return getToken(EurdepParser.ENDDEFAULT, 0); }
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public Default_sectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_default_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).enterDefault_section(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).exitDefault_section(this);
		}
	}

	public final Default_sectionContext default_section() throws RecognitionException {
		Default_sectionContext _localctx = new Default_sectionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_default_section);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(BEGINDEFAULT);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==BEGINCOMMENT) {
				{
				{
				setState(114);
				comment();
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120);
			default_record();
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==BEGINCOMMENT || _la==LINE_BEGIN) {
				{
				setState(123);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case BEGINCOMMENT:
					{
					setState(121);
					comment();
					}
					break;
				case LINE_BEGIN:
					{
					setState(122);
					default_record();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			match(ENDDEFAULT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Default_recordContext extends ParserRuleContext {
		public TerminalNode LINE_BEGIN() { return getToken(EurdepParser.LINE_BEGIN, 0); }
		public List<TerminalNode> STRING() { return getTokens(EurdepParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(EurdepParser.STRING, i);
		}
		public TerminalNode LINE_END() { return getToken(EurdepParser.LINE_END, 0); }
		public Default_recordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_default_record; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).enterDefault_record(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).exitDefault_record(this);
		}
	}

	public final Default_recordContext default_record() throws RecognitionException {
		Default_recordContext _localctx = new Default_recordContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_default_record);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(LINE_BEGIN);
			setState(131);
			match(STRING);
			setState(132);
			match(STRING);
			setState(133);
			match(LINE_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Field_listContext extends ParserRuleContext {
		public TerminalNode LINE_END() { return getToken(EurdepParser.LINE_END, 0); }
		public List<TerminalNode> STRING() { return getTokens(EurdepParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(EurdepParser.STRING, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(EurdepParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(EurdepParser.COMMA, i);
		}
		public Field_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).enterField_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).exitField_list(this);
		}
	}

	public final Field_listContext field_list() throws RecognitionException {
		Field_listContext _localctx = new Field_listContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_field_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(T__0);
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STRING) {
				{
				setState(136);
				match(STRING);
				}
			}

			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(139);
				match(COMMA);
				setState(140);
				match(STRING);
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(146);
			match(LINE_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Header_fieldContext extends ParserRuleContext {
		public TerminalNode LINE_BEGIN() { return getToken(EurdepParser.LINE_BEGIN, 0); }
		public List<TerminalNode> STRING() { return getTokens(EurdepParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(EurdepParser.STRING, i);
		}
		public TerminalNode LINE_END() { return getToken(EurdepParser.LINE_END, 0); }
		public Header_fieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).enterHeader_field(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EurdepListener ) ((EurdepListener)listener).exitHeader_field(this);
		}
	}
